force-app/main/default/objects/Personnel_Action_Change__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this change been made?</description>
    <inlineHelpText>Has this change been made?</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>