force-app/main/default/objects/Personnel_Action_Change__c/fields/Personnel_Action__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Action__c</fullName>
    <label>Personnel Action</label>
    <referenceTo>Personnel_Action__c</referenceTo>
    <relationshipLabel>Personnel Action Change</relationshipLabel>
    <relationshipName>Personnel_Action_Change</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>