force-app/main/default/objects/Personnel_Action_Change__c/fields/Update_Field__c.field-meta.xml
<CustomField>
    <fullName>Update_Field__c</fullName>
    <description>Name of the field where the change is being made</description>
    <inlineHelpText>Name of the field where the change is being made</inlineHelpText>
    <label>Update Field</label>
    <length>155</length>
    <type>Text</type>
</CustomField>