force-app/main/default/objects/Personnel_Action_Change__c/fields/Update_Object__c.field-meta.xml
<CustomField>
    <fullName>Update_Object__c</fullName>
    <description>Name of the object where the change is being made</description>
    <inlineHelpText>Name of the object where the change is being made</inlineHelpText>
    <label>Update Object</label>
    <length>155</length>
    <type>Text</type>
</CustomField>