force-app/main/default/objects/Personnel_Action_Change__c/fields/Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Value_Number__c</fullName>
    <description>New value if number</description>
    <inlineHelpText>New value if number</inlineHelpText>
    <label>Value Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>