force-app/main/default/objects/Personnel_Action_Change__c/fields/Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Value_Text__c</fullName>
    <description>New value if text</description>
    <inlineHelpText>New value if text</inlineHelpText>
    <label>Value Text</label>
    <length>155</length>
    <type>Text</type>
</CustomField>